[package]
name = "outliner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
egui_extras = { version = "0.20.0", features = ["image"] }
image = "0.24.5"
rfd = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
